--- a/_pgbackup/index_1514153630.html
+++ b/_pgbackup/index_1514153630.html
@@ -24,10 +24,10 @@
                     <span class="icon fa-diamond"></span> 
                 </div>                 
                 <div class="content"> 
-                    <div class="inner">
-                        <img src="images/logo.png" width="150" height="150"> 
-                        <h1></h1> 
-                        <p>Em breve</p>
+                    <div class="inner"> 
+                        <h1>Dimension</h1> 
+                        <p>A fully responsive site template designed by <a href="https://html5up.net">HTML5 UP</a> and released<br /> 
+								for free under the <a href="https://html5up.net/license">Creative Commons</a> license.</p> 
                     </div>                     
                 </div>                 
                 <nav> 
