--- a/index.html
+++ b/index.html
@@ -20,29 +20,27 @@
         <div id="wrapper" class=""> 
             <!-- Header -->             
             <header id="header" class=""> 
-                <div class="logo"> 
-                    <span class="icon fa-diamond"></span> 
-                </div>                 
+                <div class="logo">                      
+</div>                 
                 <div class="content"> 
                     <div class="inner">
                         <img src="images/logo.png" width="150" height="150"> 
                         <h1></h1> 
-                        <p>Em breve</p>
                     </div>                     
                 </div>                 
                 <nav> 
                     <ul> 
                         <li>
-                            <a href="#intro">Intro</a>
+                            <a href="#intro">facebook</a>
                         </li>                         
                         <li>
-                            <a href="#work">Work</a>
+                            <a href="#work">soundcloud</a>
                         </li>                         
                         <li>
-                            <a href="#about">About</a>
+                            <a href="#about">YOUTUBE</a>
                         </li>                         
                         <li>
-                            <a href="#contact">Contact</a>
+                            <a href="#contact">ContaTO</a>
                         </li>                         
                         <!--<li><a href="#elements">Elements</a></li>-->                         
                     </ul>                     
