--- a/_pgbackup/index_1514237138.html
+++ b/_pgbackup/index_1514237138.html
@@ -38,10 +38,10 @@
                             <a href="#contact">&nbsp; &nbsp;DIGA OI!</a>
                         </li>                         
                         <li class="">
-                            <a href="https://www.facebook.com/paysume/" target="https://www.facebook.com/paysume/">&nbsp; facebook</a>
+                            <a href="#face" target="https://www.facebook.com/paysume/">&nbsp; facebook</a>
                         </li>                         
                         <li class="">
-                            <a href="https://www.instagram.com/paysume/" target="https://www.instagram.com/paysume/">instagram</a>
+                            <a href="#insta" target="https://www.instagram.com/paysume/">instagram</a>
                         </li>                         
                         <!--<li><a href="#elements">Elements</a></li>-->                         
                     </ul>                     
