--- a/_pgbackup/index_1514237162.html
+++ b/_pgbackup/index_1514237162.html
@@ -41,7 +41,7 @@
                             <a href="https://www.facebook.com/paysume/" target="https://www.facebook.com/paysume/">&nbsp; facebook</a>
                         </li>                         
                         <li class="">
-                            <a href="https://www.instagram.com/paysume/" target="https://www.instagram.com/paysume/">instagram</a>
+                            <a href="#insta" target="https://www.instagram.com/paysume/">instagram</a>
                         </li>                         
                         <!--<li><a href="#elements">Elements</a></li>-->                         
                     </ul>                     
