--- a/_pgbackup/index_1514244026.html
+++ b/_pgbackup/index_1514244026.html
@@ -23,6 +23,8 @@
                 <div class="logo"> 
 </div>                 
                 <div class="content"> 
+                    <div class="inner"> 
+</div>
                     <div class="inner">
                         <img src="images/logo.png" height="250" width="250" /> 
                     </div>                     
@@ -30,10 +32,10 @@
                 <nav class=""> 
                     <ul class=""> 
                         <li class="">
-                            <a href="#about">&nbsp; &nbsp;Sobre &nbsp;&nbsp;<br></a>
+                            <a href="#about">Sobre<br></a>
                         </li>                         
                         <li class="">
-                            <a href="#contact">&nbsp;&nbsp;Contato</a>
+                            <a href="#contact">&nbsp; &nbsp;DIGA OI!</a>
                         </li>                         
                         <li class="">
                             <a href="https://www.facebook.com/paysume/" target="https://www.facebook.com/paysume/">&nbsp; facebook</a>
