--- a/_pgbackup/index_1514244907.html
+++ b/_pgbackup/index_1514244907.html
@@ -24,16 +24,17 @@
 </div>                 
                 <div class="content"> 
                     <div class="inner">
-                        <img src="images/logo.png" height="250" width="250" /> 
+                        <img src="images/logo.png" height="250" width="250" />
+                        <table class="pg-empty-placeholder"></table>                         
                     </div>                     
                 </div>                 
                 <nav class=""> 
                     <ul class=""> 
                         <li class="">
-                            <a href="#about">&nbsp; &nbsp;Sobre &nbsp;&nbsp;<br></a>
+                            <a href="#about">Sobre<br></a>
                         </li>                         
                         <li class="">
-                            <a href="#contact">&nbsp;&nbsp;Contato</a>
+                            <a href="#contact">Contato</a>
                         </li>                         
                         <li class="">
                             <a href="https://www.facebook.com/paysume/" target="https://www.facebook.com/paysume/">&nbsp; facebook</a>
