--- a/_pgbackup/index_1514244842.html
+++ b/_pgbackup/index_1514244842.html
@@ -30,10 +30,10 @@
                 <nav class=""> 
                     <ul class=""> 
                         <li class="">
-                            <a href="#about">&nbsp; &nbsp;Sobre &nbsp;&nbsp;<br></a>
+                            <a href="#about">Sobre<br></a>
                         </li>                         
                         <li class="">
-                            <a href="#contact">&nbsp;&nbsp;Contato</a>
+                            <a href="#contact">Contato</a>
                         </li>                         
                         <li class="">
                             <a href="https://www.facebook.com/paysume/" target="https://www.facebook.com/paysume/">&nbsp; facebook</a>
