--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
                 <!-- Contact -->                 
                 <article id="contact" class=""> 
                     <h2 class="major">contato</h2> 
-                    <form method="post" action="#"> 
+                    <form method="post" action="https://formspree.io/fabiodljunior@gmail.com"> 
                         <div class="field half first"> 
                             <label for="name">nome</label>                             
                             <input type="text" name="name" id="name" /> 
