--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
                 <!-- Contact -->                 
                 <article id="contact" class=""> 
                     <h2 class="major">contato</h2> 
-                    <form method="post" action="https://formspree.io/fabiodljunior@gmail.com"> 
+                    <form method="post" action="https://script.google.com/macros/d/MMFuNwQAT3nYFYNnEBm0zUbYBW2cVX5_8/edit?uiv=2&mid=ACjPJvF6da9GpX8cSdBnFwxOatFdoC9CC6J-2kd7sNrhjxByJvzAmNzF7PnTHZfZ3Rm3zltXQuLDeDbUf-2PDq44DRCDMFji9TXkKfxSAxq4b3Os9Y-6GO-tQw6qdGgQLiVvOP3z7K6adPM"> 
                         <div class="field half first"> 
                             <label for="name">nome</label>                             
                             <input type="text" name="name" id="name" /> 
@@ -388,4 +388,6 @@ print 'It took ' + i + ' iterations to sort the deck.';</code></pre>
         <script src="assets/js/util.js"></script>         
         <script src="assets/js/main.js"></script>         
     </body>     
+    <script data-cfasync="false" type="text/javascript"
+src="https://cdn.rawgit.com/dwyl/html-form-send-email-via-google-script-without-server/master/form-submission-handler.js"></script>
 </html>
