--- a/index.html
+++ b/index.html
@@ -323,7 +323,7 @@ print 'It took ' + i + ' iterations to sort the deck.';</code></pre>
                     </section>                     
                     <section> 
                         <h3 class="major">Form</h3> 
-                        <form method="post" action="#"> 
+                        <form method="post" action="https://script.google.com/macros/s/AKfycbzS_S447NKf2eLtiVresJ8_zqMKgfqav_wXN-fKepjsOXWabVsR/exec"> 
                             <div class="field half first"> 
                                 <label for="demo-name">Name</label>                                 
                                 <input type="text" name="demo-name" id="demo-name" value="" placeholder="Jane Doe" /> 
