--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
                 <!-- Contact -->                 
                 <article id="contact" class=""> 
                     <h2 class="major">contato</h2> 
-                    <form method="post" action="https://script.google.com/macros/d/MMFuNwQAT3nYFYNnEBm0zUbYBW2cVX5_8/edit?uiv=2&mid=ACjPJvF6da9GpX8cSdBnFwxOatFdoC9CC6J-2kd7sNrhjxByJvzAmNzF7PnTHZfZ3Rm3zltXQuLDeDbUf-2PDq44DRCDMFji9TXkKfxSAxq4b3Os9Y-6GO-tQw6qdGgQLiVvOP3z7K6adPM"> 
+                    <form id="gpost" method="post" action="https://script.google.com/macros/s/AKfycbzS_S447NKf2eLtiVresJ8_zqMKgfqav_wXN-fKepjsOXWabVsR/exec"> 
                         <div class="field half first"> 
                             <label for="name">nome</label>                             
                             <input type="text" name="name" id="name" /> 
