--- a/index.html
+++ b/index.html
@@ -72,30 +72,34 @@
                     <p>Sumé é um nome em ascensão no trance progressivo. Com um live totalmente autoral, visa o coletivo, transformando a música e o público numa força única. Focado na produção do seu primeiro álbum, busca passar para o público toda emoção envolvida no processo de criação. Proporcionando uma experiência diferente para o público, navegando entre a introspecção e a euforia, surpreende os novos ouvintes e arrasta para a pista aqueles que já ouviram. Formado em discotecagem na AIMEC (Academia Internacional de Música Eletrônica), busca a perfeição ao passar sua mensagem para o público.</p>
                     <ul class="icons"> 
                         <li>
-                            <a href="#" class="icon fa-facebook" target="https://www.facebook.com/paysume/"><span class="label">Facebook</span></a>
+                            <a href="https://www.facebook.com/paysume/" class="icon fa-facebook" target="https://www.facebook.com/paysume/"><span class="label">Facebook</span></a>
                         </li>
                         <li>
-                            <a href="#" class="icon fa-instagram" target="https://www.instagram.com/paysume/"><span class="label">Instagram</span></a>
+                            <a href="https://www.instagram.com/paysume/" class="icon fa-instagram" target="https://www.instagram.com/paysume/"><span class="label">Instagram</span></a>
                         </li>
                         <li>
-                            <a href="#" class="icon fa-soundcloud" target="https://soundcloud.com/paysume"><span class="label">Twitter</span></a>
+                            <a href="https://soundcloud.com/paysume" class="icon fa-soundcloud" target="https://soundcloud.com/paysume"><span class="label">Twitter</span></a>
                         </li>                         
                         <li class="">
-                            <a href="#" class="icon fa-youtube" target="https://www.youtube.com/channel/UCcYeWMkaiGXETXtY4Bbh_Ug"><span class="label">GitHub</span></a>
+                            <a href="https://www.youtube.com/channel/UCcYeWMkaiGXETXtY4Bbh_Ug" class="icon fa-youtube" target="https://www.youtube.com/channel/UCcYeWMkaiGXETXtY4Bbh_Ug"><span class="label">GitHub</span></a>
                         </li>                         
                     </ul>                     
                 </article>                 
                 <!-- Contact -->                 
                 <article id="contact" class=""> 
-                    <h2 class="major">contato</h2> 
-                    <form id="gpost" method="post" action="https://script.google.com/macros/s/AKfycbzS_S447NKf2eLtiVresJ8_zqMKgfqav_wXN-fKepjsOXWabVsR/exec"> 
+                    <h2 class="major"></h2> 
+                    <form id="gform" method="POST" class="pure-form pure-form-stacked" data-email="example@email.net"
+  action="https://script.google.com/macros/s/AKfycbwIP-GCoNUvZwl7XZKgUE7J1NEmNgYvOJOoptXqpK8HXp5htljC/exec">
                         <div class="field half first"> 
                             <label for="name">nome</label>                             
                             <input type="text" name="name" id="name" /> 
                         </div>                         
                         <div class="field half"> 
                             <label for="email">Email</label>                             
-                            <input type="text" name="email" id="email" /> 
+                            <input type="text" name="email" id="email"       required placeholder="nome@email.com" 
+                            /> 
+                                  <span id="email-invalid" style="display:none">
+        O e-mail precisa ser válido</span>
                         </div>                         
                         <div class="field"> 
                             <label for="message">mensagem</label>                             
@@ -103,13 +107,23 @@
                         </div>                         
                         <ul class="actions"> 
                             <li>
-                                <input type="submit" class="special" value="Enviar" />
+
+                                <input onclick="Enviar(this);" type="submit" class="special" value="Enviar"   />
+                                <script>
+function Enviar(button) {
+
+    button.disabled = true;
+}
+</script>
                             </li>                             
                             <li>
                                 <input type="reset" value="Apagar tudo" />
                             </li>                             
                         </ul>                         
-                    </form>                     
+                    </form>      
+                    <div style="display:none;" id="thankyou_message">
+    <h2>Obrigado por entrar em contato!</h2>
+  </div>               
                 </article>                 
                 <!-- Elements -->                 
                 <article id="elements"> 
