--- a/_pgbackup/index_1514327306.html
+++ b/_pgbackup/index_1514327306.html
@@ -5,6 +5,7 @@
 	Free for personal and commercial use under the CCA 3.0 license (html5up.net/license)
 --> 
 <html> 
+
     <head> 
         <title>SUMÉ</title>         
         <meta charset="utf-8" /> 
@@ -104,8 +105,10 @@
                             <textarea name="message" id="message" rows="4"></textarea>                             
                         </div>                         
                         <ul class="actions"> 
-                            <li> 
-                                <input type="submit" class="special" value="Enviar" onclick="onClick=" his.form.submit(); this.disabled="true;" this.value='Sending…' "" /> 
+                            <li > 
+                                <input  type="submit" class="special" value="Enviar" onclick="onClick="this.form.submit(); this.disabled=true; this.value='Sending…'; "" /> 
+
+                             
                             </li>                             
                             <li> 
                                 <input type="reset" value="Apagar tudo" /> 
