--- a/index.html
+++ b/index.html
@@ -66,10 +66,8 @@
                     <span class="image main"></span> 
                 </article>                 
                 <!-- About -->                 
-                <article id="about" class=""> 
-                    <h2 class="major">Sobre</h2> 
-                    <span class="image main"><img src="images/pic01.jpg" alt="" /></span> 
-                    <p>Sumé é um nome em ascensão no trance progressivo. Com um live totalmente autoral, visa o coletivo, transformando a música e o público numa força única. Focado na produção do seu primeiro álbum, busca passar para o público toda emoção envolvida no processo de criação. Proporcionando uma experiência diferente para o público, navegando entre a introspecção e a euforia, surpreende os novos ouvintes e arrasta para a pista aqueles que já ouviram. Formado em discotecagem na AIMEC (Academia Internacional de Música Eletrônica), busca a perfeição ao passar sua mensagem para o público.</p> 
+                <article id="about" class="">
+                    <h2 class="nui">o Sumé</h2>
                     <ul class="icons"> 
                         <li> 
                             <a href="https://www.facebook.com/paysume/" class="icon fa-facebook" target="https://www.facebook.com/paysume/"><span class="label">Facebook</span></a> 
@@ -80,15 +78,16 @@
                         <li> 
                             <a href="https://soundcloud.com/paysume" class="icon fa-soundcloud" target="https://soundcloud.com/paysume"><span class="label">Twitter</span></a> 
                         </li>                         
-                        <li class=""> 
+                        <li> 
                             <a href="https://www.youtube.com/channel/UCcYeWMkaiGXETXtY4Bbh_Ug" class="icon fa-youtube" target="https://www.youtube.com/channel/UCcYeWMkaiGXETXtY4Bbh_Ug"><span class="label">GitHub</span></a> 
                         </li>                         
                     </ul>                     
+                    <span class="image main"><img src="images/pic01.jpg" alt="" /></span> 
+                    <p>Sumé é um nome em ascensão no trance progressivo. Com um live totalmente autoral, visa o coletivo, transformando a música e o público numa força única. Focado na produção do seu primeiro álbum, busca passar para o público toda emoção envolvida no processo de criação. Proporcionando uma experiência diferente para o público, navegando entre a introspecção e a euforia, surpreende os novos ouvintes e arrasta para a pista aqueles que já ouviram. Formado em discotecagem na AIMEC (Academia Internacional de Música Eletrônica), busca a perfeição ao passar sua mensagem para o público.</p> 
                 </article>                 
                 <!-- Contact -->                 
                 <article id="contact" class=""> 
-                    <h2 class="major"></h2> 
-                    <form id="gform" method="POST" class="pure-form pure-form-stacked" data-email="example@email.net" action="https://script.google.com/macros/s/AKfycbwIP-GCoNUvZwl7XZKgUE7J1NEmNgYvOJOoptXqpK8HXp5htljC/exec"> 
+                    <form id="gform" method="POST" class="pure-form pure-form-stacked" data-email="example@email.net" action="https://script.google.com/macros/s/AKfycbw3kgPyVrIDfv7US3BOa6k9tqovPuIvTo8-n-RqXwRqKqwtTE0/exec"> 
                         <div class="field half first"> 
                             <label for="name">nome</label>                             
                             <input type="text" name="name" id="name" /> 
@@ -328,7 +327,7 @@ print 'It took ' + i + ' iterations to sort the deck.';</code></pre>
                     </section>                     
                     <section> 
                         <h3 class="major">Form</h3> 
-                        <form id="gform" method="post" action="https://script.google.com/macros/s/AKfycbzS_S447NKf2eLtiVresJ8_zqMKgfqav_wXN-fKepjsOXWabVsR/exec"> 
+                        <form id="gform" method="post" action="https://script.google.com/macros/s/AKfycbw3kgPyVrIDfv7US3BOa6k9tqovPuIvTo8-n-RqXwRqKqwtTE0/exec"> 
                             <div class="field half first"> 
                                 <label for="demo-name">Name</label>                                 
                                 <input type="text" name="demo-name" id="demo-name" value="" placeholder="Jane Doe" /> 
