--- a/index.html
+++ b/index.html
@@ -48,14 +48,14 @@
             <!-- Main -->             
             <div id="main" class=""> 
                 <!-- Intro -->                 
-                <article id="intro" class=""> 
+                <!--                 <article id="intro" class=""> 
                     <h2 class="major">SOBRE:</h2> 
                     <span class="image main"></span> 
                     <p>Sumé é um nome em ascensão no trance progressivo. Com um live totalmente autoral, visa o coletivo, transformando a música e o público numa força única. Focado na produção do seu primeiro álbum, busca passar para o público toda emoção envolvida no processo de criação. Proporcionando uma experiência diferente para o público, navegando entre a introspecção e a euforia, surpreende os novos ouvintes e arrasta para a pista aqueles que já ouviram. Formado em discotecagem na AIMEC (Academia Internacional de Música Eletrônica), busca a perfeição ao passar sua mensagem para o público.</p> 
                     <p></p> 
-                </article>                 
+                </article>   -->                 
                 <!-- Work -->                 
-                <article id="work" class=""> 
+                <!--                 <article id="work" class=""> 
                     <tbody class="pg-empty-placeholder"></tbody>                     
                     <h2 class="major">sabina&nbsp;</h2> 
                     <span class="image main"><a href="https://soundcloud.com/paysume/sabina-original-mix" target="_blank"> 
@@ -64,30 +64,28 @@
                     <p>Label: Phantom Unit<br>Data de lançamento: 13 de outubro, 2017<br>Mixagem: Fábio Duarte<br>Masterização: Fábio Duarte<br><br></p> 
                     <h2 class="major">zumbi</h2> 
                     <span class="image main"></span> 
-                </article>                 
+                </article>    -->                 
                 <!-- About -->                 
                 <article id="about" class=""> 
-                    <h2 class="major">Sobre</h2> 
-                    <span class="image main"><img src="images/pic01.jpg" alt="" /></span> 
-                    <p>Sumé é um nome em ascensão no trance progressivo. Com um live totalmente autoral, visa o coletivo, transformando a música e o público numa força única. Focado na produção do seu primeiro álbum, busca passar para o público toda emoção envolvida no processo de criação. Proporcionando uma experiência diferente para o público, navegando entre a introspecção e a euforia, surpreende os novos ouvintes e arrasta para a pista aqueles que já ouviram. Formado em discotecagem na AIMEC (Academia Internacional de Música Eletrônica), busca a perfeição ao passar sua mensagem para o público.</p> 
-                    <ul class="icons"> 
-                        <li> 
-                            <a href="https://www.facebook.com/paysume/" class="icon fa-facebook" target="https://www.facebook.com/paysume/"><span class="label">Facebook</span></a> 
-                        </li>                         
-                        <li> 
-                            <a href="https://www.instagram.com/paysume/" class="icon fa-instagram" target="https://www.instagram.com/paysume/"><span class="label">Instagram</span></a> 
-                        </li>                         
-                        <li> 
-                            <a href="https://soundcloud.com/paysume" class="icon fa-soundcloud" target="https://soundcloud.com/paysume"><span class="label">Twitter</span></a> 
-                        </li>                         
-                        <li class=""> 
-                            <a href="https://www.youtube.com/channel/UCcYeWMkaiGXETXtY4Bbh_Ug" class="icon fa-youtube" target="https://www.youtube.com/channel/UCcYeWMkaiGXETXtY4Bbh_Ug"><span class="label">GitHub</span></a> 
-                        </li>                         
-                    </ul>                     
+                    <h2 class="major">sumé</h2> 
+                    <span class="image main"><ul class="icons"> 
+                            <li> 
+                                <a href="https://www.facebook.com/paysume/" class="icon fa-facebook" target="https://www.facebook.com/paysume/"><span class="label">Facebook</span></a> 
+                            </li>                             
+                            <li> 
+                                <a href="https://www.instagram.com/paysume/" class="icon fa-instagram" target="https://www.instagram.com/paysume/"><span class="label">Instagram</span></a> 
+                            </li>                             
+                            <li> 
+                                <a href="https://soundcloud.com/paysume" class="icon fa-soundcloud" target="https://soundcloud.com/paysume"><span class="label">Twitter</span></a> 
+                            </li>                             
+                            <li class=""> 
+                                <a href="https://www.youtube.com/channel/UCcYeWMkaiGXETXtY4Bbh_Ug" class="icon fa-youtube" target="https://www.youtube.com/channel/UCcYeWMkaiGXETXtY4Bbh_Ug"><span class="label">GitHub</span></a> 
+                            </li>                             
+                        </ul><img src="images/pic01.jpg" alt="" /></span> 
+                    <p>Um nome em ascensão no trance progressivo. Com um live totalmente autoral, visa o coletivo, transformando a música e o público numa força única. Focado na produção do seu primeiro álbum, busca passar para o público toda emoção envolvida no processo de criação. Proporcionando uma experiência diferente para o público, navegando entre a introspecção e a euforia, surpreende os novos ouvintes e arrasta para a pista aqueles que já ouviram. Formado em discotecagem na AIMEC (Academia Internacional de Música Eletrônica), busca a perfeição ao passar sua mensagem para o público.</p>                      
                 </article>                 
                 <!-- Contact -->                 
-                <article id="contact" class=""> 
-                    <h2 class="major"></h2> 
+                <article id="contact" class="">                      
                     <form id="gform" method="POST" class="pure-form pure-form-stacked" data-email="example@email.net" action="https://script.google.com/macros/s/AKfycbwIP-GCoNUvZwl7XZKgUE7J1NEmNgYvOJOoptXqpK8HXp5htljC/exec"> 
                         <div class="field half first"> 
                             <label for="name">nome</label>                             
@@ -105,13 +103,7 @@
                         </div>                         
                         <ul class="actions"> 
                             <li> 
-                                <input type="submit" class="special" value="Enviar" onclick="Enviar(this);" /> 
-                                <script>
-function Enviar(button) {
-
-    button.disabled = true;
-}
-</script>                                 
+                                <input type="submit" class="special" value="Enviar" "> 
                             </li>                             
                             <li> 
                                 <input type="reset" value="Apagar tudo" /> 
@@ -119,7 +111,7 @@ function Enviar(button) {
                         </ul>                         
                     </form>                     
                     <div style="display:none;" id="thankyou_message"> 
-                        <h2>Obrigado por entrar em contato!</h2> 
+                        <h3>Obrigado por entrar em contato! Retornarei sua mensagem em breve...</h3> 
                     </div>                     
                 </article>                 
                 <!-- Elements -->                 
