--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
                 </article>                 
                 <!-- Contact -->                 
                 <article id="contact" class="">                      
-                    <form id="gform" method="POST" class="pure-form pure-form-stacked" data-email="example@email.net" action="https://script.google.com/macros/s/AKfycbwIP-GCoNUvZwl7XZKgUE7J1NEmNgYvOJOoptXqpK8HXp5htljC/exec"> 
+                    <form id="gform" method="POST" class="pure-form pure-form-stacked" data-email="example@email.net" action="https://script.google.com/macros/s/AKfycbw3kgPyVrIDfv7US3BOa6k9tqovPuIvTo8-n-RqXwRqKqwtTE0/exec"> 
                         <div class="field half first"> 
                             <label for="name">nome</label>                             
                             <input type="text" name="name" id="name" /> 
@@ -111,7 +111,8 @@
                         </ul>                         
                     </form>                     
                     <div style="display:none;" id="thankyou_message"> 
-                        <h3>Obrigado por entrar em contato! Retornarei sua mensagem em breve...</h3> 
+                        <h3>Obrigado por entrar em contato!</h3> 
+                        <h3>Retornarei sua mensagem em breve...</h3> 
                     </div>                     
                 </article>                 
                 <!-- Elements -->                 
