--- a/index.html
+++ b/index.html
@@ -82,10 +82,10 @@
                                 <a href="https://www.youtube.com/channel/UCcYeWMkaiGXETXtY4Bbh_Ug" class="icon fa-youtube" target="https://www.youtube.com/channel/UCcYeWMkaiGXETXtY4Bbh_Ug"><span class="label">GitHub</span></a> 
                             </li>                             
                         </ul><img src="images/pic01.jpg" alt="" /></span> 
-                    <p>Um nome em ascensão no trance progressivo. Com um live totalmente autoral, visa o coletivo, transformando a música e o público numa força única. Focado na produção do seu primeiro álbum, busca passar para o público toda emoção envolvida no processo de criação. Proporcionando uma experiência diferente para o público, navegando entre a introspecção e a euforia, surpreende os novos ouvintes e arrasta para a pista aqueles que já ouviram. Formado em discotecagem na AIMEC (Academia Internacional de Música Eletrônica), busca a perfeição ao passar sua mensagem para o público.</p>                      
+                    <p>Um nome em ascensão no trance progressivo. Com um live totalmente autoral, visa o coletivo, transformando a música e o público numa força única. Focado na produção do seu primeiro álbum, busca passar para o público toda emoção envolvida no processo de criação. Proporcionando uma experiência diferente para o público, navegando entre a introspecção e a euforia, surpreende os novos ouvintes e arrasta para a pista aqueles que já ouviram. Formado em discotecagem na AIMEC (Academia Internacional de Música Eletrônica), busca a perfeição ao passar sua mensagem para o público.</p> 
                 </article>                 
                 <!-- Contact -->                 
-                <article id="contact" class="">                      
+                <article id="contact" class=""> 
                     <form id="gform" method="POST" class="pure-form pure-form-stacked" data-email="example@email.net" action="https://script.google.com/macros/s/AKfycbw3kgPyVrIDfv7US3BOa6k9tqovPuIvTo8-n-RqXwRqKqwtTE0/exec"> 
                         <div class="field half first"> 
                             <label for="name">nome</label>                             
@@ -103,7 +103,7 @@
                         </div>                         
                         <ul class="actions"> 
                             <li> 
-                                <input type="submit" class="special" value="Enviar" "> 
+                                <input type="submit" class="special" value="Enviar" ""> 
                             </li>                             
                             <li> 
                                 <input type="reset" value="Apagar tudo" /> 
