--- a/index.html
+++ b/index.html
@@ -67,21 +67,22 @@
                 </article>    -->                 
                 <!-- About -->                 
                 <article id="about" class=""> 
-                    <h2 class="major">sumé</h2> 
-                    <span class="image main"><ul class="icons"> 
-                            <li> 
-                                <a href="https://www.facebook.com/paysume/" class="icon fa-facebook" target="https://www.facebook.com/paysume/"><span class="label">Facebook</span></a> 
-                            </li>                             
-                            <li> 
-                                <a href="https://www.instagram.com/paysume/" class="icon fa-instagram" target="https://www.instagram.com/paysume/"><span class="label">Instagram</span></a> 
-                            </li>                             
-                            <li> 
-                                <a href="https://soundcloud.com/paysume" class="icon fa-soundcloud" target="https://soundcloud.com/paysume"><span class="label">Twitter</span></a> 
-                            </li>                             
-                            <li class=""> 
-                                <a href="https://www.youtube.com/channel/UCcYeWMkaiGXETXtY4Bbh_Ug" class="icon fa-youtube" target="https://www.youtube.com/channel/UCcYeWMkaiGXETXtY4Bbh_Ug"><span class="label">GitHub</span></a> 
-                            </li>                             
-                        </ul><img src="images/pic01.jpg" alt="" /></span> 
+                    <h2 class="major">sumé</h2>
+                    <ul class="icons"> 
+                        <li> 
+                            <a href="https://www.facebook.com/paysume/" class="icon fa-facebook" target="https://www.facebook.com/paysume/"><span class="label">Facebook</span></a> 
+                        </li>                         
+                        <li> 
+                            <a href="https://www.instagram.com/paysume/" class="icon fa-instagram" target="https://www.instagram.com/paysume/"><span class="label">Instagram</span></a> 
+                        </li>                         
+                        <li> 
+                            <a href="https://soundcloud.com/paysume" class="icon fa-soundcloud" target="https://soundcloud.com/paysume"><span class="label">Twitter</span></a> 
+                        </li>                         
+                        <li class=""> 
+                            <a href="https://www.youtube.com/channel/UCcYeWMkaiGXETXtY4Bbh_Ug" class="icon fa-youtube" target="https://www.youtube.com/channel/UCcYeWMkaiGXETXtY4Bbh_Ug"><span class="label">GitHub</span></a> 
+                        </li>                         
+                    </ul>                     
+                    <span class="image main"><img src="images/pic01.jpg" alt="" /></span> 
                     <p>Um nome em ascensão no trance progressivo. Com um live totalmente autoral, visa o coletivo, transformando a música e o público numa força única. Focado na produção do seu primeiro álbum, busca passar para o público toda emoção envolvida no processo de criação. Proporcionando uma experiência diferente para o público, navegando entre a introspecção e a euforia, surpreende os novos ouvintes e arrasta para a pista aqueles que já ouviram. Formado em discotecagem na AIMEC (Academia Internacional de Música Eletrônica), busca a perfeição ao passar sua mensagem para o público.</p> 
                 </article>                 
                 <!-- Contact -->                 
