--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     </head>     
     <body class=""> 
         <!-- Wrapper -->         
-        <div id="wrapper" class=""> 
+        <div id="wrapper" class="wrapper"> 
             <!-- Header -->             
             <header id="header" class=""> 
                 <div class="logo"> 
@@ -382,7 +382,10 @@ print 'It took ' + i + ' iterations to sort the deck.';</code></pre>
 </footer>             
         </div>         
         <!-- BG -->         
-        <div id="bg"></div>         
+        <div class="wrapper">
+            <div class="bg" id="bg"></div>
+
+        </div>         
         <!-- Scripts -->         
         <script src="assets/js/jquery.min.js"></script>         
         <script src="assets/js/skel.min.js"></script>         
